<resources>
    <string name="app_name">Layout Makeup</string>

    <string name="title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="arrow_back">back action</string>
    <string name="black_theme_setting">Темная тема</string>
    <string name="share_setting">Поделиться приложением</string>
    <string name="support_setting">Написать в поддержку</string>
    <string name="agreement_setting">Пользовательское соглашение</string>
    <string name="share_description">share description</string>
    <string name="search_button_clicked">Переход в меню поиска</string>
    <string name="media_library_button_clicked">Переход в медиатеку</string>
    <string name="settings_button_clicked">Переход в меню настроек</string>
    <string name="url_android_practicum">https://practicum.yandex.ru/android-developer/</string>
    <string name="url_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="text_for_chooser">Share with…</string>
    <string name="message_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="edit_text_input">edit text input</string>
    <string name="empty_search_input">empty_search_input</string>
    <string name="dev_email">Mamon423423@yandex.ru</string>
    <string name="artist_and_time">%1$s • %2$s</string>
    <string name="default_text">Just a simple default text to fill the view</string>
    <string name="album_image">album image</string>
    <string name="arrow_forward">arrow forward</string>

    <!--search screen-->
    <string name="description_error_image">error image</string>
    <string name="update">Обновить</string>
    <string name="error_message_not_found">Ничего не нашлось</string>
    <string name="error_message_something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="error_message_not_200">Неизвестная ошибка. Код %1$d</string>
    <string name="search_history_title">Вы искали</string>
    <string name="clean_history">Очистить историю</string>

    <!--player screen-->
    <string name="album_cover">album cover</string>
    <string name="add_to_playlist_button">add to playlist button</string>
    <string name="default_timer_text">00:00</string>
    <string name="track_duration">Длительность</string>
    <string name="album_name">Альбом</string>
    <string name="track_year">Год</string>
    <string name="track_genre">Жанр</string>
    <string name="track_country">Страна</string>
    <string name="pause_button">pause button</string>
    <string name="drag_handler">drag handler</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="toast_message_already_exists">Трек уже добавлен в плейлист %1$s</string>
    <string name="toast_message_added">Добавлено в плейлист %1$s</string>

    <!--media screen-->
    <string name="favourite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="media_is_empty">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlists">Вы не создали\n ни одного плейлиста</string>
    <string name="no_content_image">no content image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--new playlist screen-->
    <string name="add_playlist_image">add playlist image</string>
    <string name="playlist_name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="cancelling_dialog_title">Завершить создание плейлиста?</string>
    <string name="cancelling_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="cancelling_dialog_negative">Отмена</string>
    <string name="cancelling_dialog_positive">Завершить</string>
    <string name="snackbar_new_playlist_message">Плейлист %1$s создан</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>

    <!--Playlist screen-->
    <string name="playlist_image">playlist image</string>
    <string name="default_playlist_name">Best songs 2021</string>
    <string name="default_playlist_description">2022</string>
    <string name="default_playlist_info">300 минут • 98 треков</string>
    <string name="playlist_info">%1$s • %2$s</string>
    <string name="share_button">share button</string>
    <string name="no">НЕТ</string>
    <string name="yes">ДА</string>
    <string name="dialog_delete_track_title">Хотите удалить трек?</string>
    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлиcт</string>
    <string name="dialog_delete_playlist_title">Хотите удалить плейлист «%1$s»?</string>
    <string name="message_no_tracks">В этом плейлисте нет треков</string>
    <string name="cancel">ОТМЕНА</string>
    <string name="delete">УДАЛИТЬ</string>
    <string name="delete_track">Удалить трек</string>
    <string name="are_you_sure_delete_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="are_you_sure_delete_playlist">Вы уверены, что хотите удалить этот плейлист?</string>



</resources>