<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SettingsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.settings.fragments.SettingsFragment">


    <TextView
        android:id="@+id/title_text_view"
        style="@style/SettingsActivityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/title_margin_start"
        android:layout_marginTop="@dimen/title_margin_start"
        android:text="@string/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <TextView
        android:id="@+id/black_theme_text_view"
        style="@style/SettingNames"
        android:text="@string/black_theme_setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text_view" />

    <TextView
        android:id="@+id/share_text_view"
        style="@style/SettingNames"
        android:text="@string/share_setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/black_theme_text_view"
        app:drawableEndCompat="@drawable/icon_share"/>

    <TextView
        android:id="@+id/support_text_view"
        style="@style/SettingNames"
        android:text="@string/support_setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/share_text_view"
        app:drawableEndCompat="@drawable/icon_support"/>

    <TextView
        android:id="@+id/agreement_text_view"
        style="@style/SettingNames"
        android:text="@string/agreement_setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/support_text_view"
        app:drawableEndCompat="@drawable/icon_arrow_forward"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_button"
        style="@style/SettingsSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/black_theme_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/black_theme_text_view"
        />




</androidx.constraintlayout.widget.ConstraintLayout>