<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/track_height">

    <ImageView
        android:id="@+id/album_image"
        android:layout_width="@dimen/album_image_sides"
        android:layout_height="@dimen/album_image_sides"
        android:layout_marginStart="@dimen/search_edit_sides_padding"
        android:contentDescription="@string/album_image"
        android:src="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_track_text"
        android:orientation="vertical"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/album_image"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/song_name"
            style="@style/SongNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/default_text" />

        <TextView
            android:id="@+id/artist_and_track_time"
            style="@style/SongAlbumAndTimeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artist_and_time"
            tools:text="@string/default_text" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        style="@style/ArrowForward"
        android:layout_width="@dimen/arrow_forward_sides"
        android:layout_height="@dimen/arrow_forward_sides"
        android:layout_marginEnd="@dimen/settings_back_arrow_sides"
        android:contentDescription="@string/arrow_forward"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>