<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">


    <ImageButton
        android:id="@+id/arrow_back_button"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:contentDescription="@string/arrow_back"
        android:src="@drawable/icon_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settings_title_text_view"
        style="@style/YSTextStyleBlack22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="@+id/arrow_back_button"
        app:layout_constraintStart_toEndOf="@id/arrow_back_button"
        app:layout_constraintTop_toTopOf="@id/arrow_back_button" />

    <TextView
        android:id="@+id/black_theme_text_view"
        style="@style/YSTextStyleBlack16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="40dp"
        android:text="@string/black_theme_setting"
        app:layout_constraintBottom_toTopOf="@+id/share_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_title_text_view" />

    <TextView
        android:id="@+id/share_text_view"
        style="@style/YSTextStyleBlack16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="40dp"
        android:text="@string/share_setting"
        app:layout_constraintBottom_toTopOf="@+id/support_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/black_theme_text_view" />

    <TextView
        android:id="@+id/support_text_view"
        style="@style/YSTextStyleBlack16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="40dp"
        android:text="@string/support_setting"
        app:layout_constraintBottom_toTopOf="@+id/agreement_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/share_text_view" />

    <TextView
        android:id="@+id/agreement_text_view"
        style="@style/YSTextStyleBlack16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="500dp"
        android:text="@string/agreement_setting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/support_text_view" />

    <Switch
        android:id="@+id/switch_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/black_theme_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/black_theme_text_view"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <ImageButton
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/icon_share"
        android:background="?android:selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toBottomOf="@+id/share_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/share_text_view"
        android:contentDescription="@string/share_description"/>

    <ImageButton
        android:id="@+id/support_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/icon_support"
        android:background="?android:selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toBottomOf="@+id/support_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/support_text_view"
        android:contentDescription="@string/share_description"/>

    <ImageButton
        android:id="@+id/agreement_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/icon_arrow_forward"
        android:background="?android:selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toBottomOf="@+id/agreement_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/agreement_text_view"
        android:contentDescription="@string/share_description"/>


</androidx.constraintlayout.widget.ConstraintLayout>