<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_title_text_view"
        style="@style/YSTextStyleWhite22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sides_margin"
        android:layout_marginTop="14dp"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_button"
        style="@style/MainButtonsStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:icon="@drawable/icon_search"
        android:layout_marginHorizontal="@dimen/sides_margin"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="@dimen/sides_margin"
        android:backgroundTint="@color/white"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/search"
        app:cornerRadius="@dimen/main_buttons_corner_radius"
        app:layout_constraintBottom_toTopOf="@+id/media_library_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title_text_view"
        app:layout_constraintVertical_weight="1"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/media_library_button"
        style="@style/MainButtonsStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/sides_margin"
        android:layout_marginBottom="@dimen/sides_margin"
        android:backgroundTint="@color/white"
        android:insetTop="0dp"
        app:icon="@drawable/icon_media"
        android:insetBottom="0dp"
        android:text="@string/media_library"
        app:cornerRadius="@dimen/main_buttons_corner_radius"
        app:layout_constraintBottom_toTopOf="@+id/settings_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_button"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_button"
        style="@style/MainButtonsStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/sides_margin"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/white"
        android:insetTop="0dp"
        app:icon="@drawable/icon_settings"
        android:insetBottom="0dp"
        android:text="@string/settings"
        app:cornerRadius="@dimen/main_buttons_corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/media_library_button"
        app:layout_constraintVertical_weight="1" />


</androidx.constraintlayout.widget.ConstraintLayout>