<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SettingsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <ImageButton
        android:id="@+id/arrow_back_button"
        style="@style/BackArrowButton"
        android:layout_width="@dimen/settings_back_arrow_sides"
        android:layout_height="@dimen/settings_back_arrow_sides"
        android:contentDescription="@string/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/search_title_text_view"
        style="@style/SettingsActivityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/title_margin_start"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="@+id/arrow_back_button"
        app:layout_constraintStart_toEndOf="@id/arrow_back_button"
        app:layout_constraintTop_toTopOf="@id/arrow_back_button" />

    <!--autoFill in style-->
    <EditText
        android:id="@+id/search_edit_text"
        style="@style/SearchEditText"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_title_text_view" />

    <ImageButton
        android:id="@+id/remove_input_button"
        style="@style/RemoveInputButton"
        android:layout_width="@dimen/icon_close_sizes"
        android:layout_height="@dimen/icon_close_sizes"
        android:layout_marginEnd="@dimen/search_edit_sides_padding"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/empty_search_input"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/search_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/search_edit_text"
        app:layout_constraintTop_toTopOf="@+id/search_edit_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/search_from_title_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_edit_text" />

    <ImageView
        android:id="@+id/error_not_found_image"
        android:layout_width="@dimen/error_image_side_and_margin"
        android:layout_height="@dimen/error_image_side_and_margin"
        style="@style/ErrorImageNotFound"
        android:contentDescription="@string/description_error_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_edit_text" />

    <ImageView
        android:id="@+id/error_something_wrong_image"
        style="@style/ErrorImageOther"
        android:layout_width="@dimen/error_image_side_and_margin"
        android:layout_height="@dimen/error_image_side_and_margin"
        android:contentDescription="@string/description_error_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_edit_text" />

    <TextView
        style="@style/ErrorTextMessage"
        android:id="@+id/error_text_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/search_from_title_margin"
        android:layout_marginTop="@dimen/settings_back_arrow_margin"
        android:fontFamily="@font/ys_display_medium"
        android:textAlignment="center"
        android:textSize="@dimen/error_text_message_size"
        android:visibility="invisible"
        tools:text="@string/default_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/error_not_found_image" />

    <Button
        android:id="@+id/update_button"
        style="@style/UpdateRequestButton"
        android:layout_width="90dp"
        android:layout_height="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/error_text_message" />

</androidx.constraintlayout.widget.ConstraintLayout>